change done in index and css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -42,12 +43,28 @@ main img {
     box-shadow: 0 0 30px gray;
 }
 
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    background-color: #f0f8ff;
+    color: #333;
+}
+
+img.profile {
+    float: right;
+    margin-left: 1rem;
+}
+
+
 p {
    padding: 0;
 
 }
 
 aside{
+    position: relative;
     width: 20em;
     margin: 1em;
     border: 1px solid rgb(0,0,0, 0.2);
@@ -61,6 +78,16 @@ aside img{
     width: 200px;
     height: auto;
 }
+
+aside h2 {
+position: absolute;
+    top: 47px;
+    left: 150px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+    font-size: 1.2rem;
+}
+
 
 /* footer */
 footer {
