--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,16 +17,49 @@ header {
     padding: 20px;
     text-align: center;
     font-size: 26px;
+
 }
 
-nav a{
-    color: white;
-   padding: 10px;
-   display: block;
+header,
+.grid,
+footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+nav {
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 20rem 1fr;
+    gap: 1rem;
+    align-items: start;
+}
+
+
+nav {
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 main {
     padding: 20px;
+    grid-column: 2 / 3;
+        margin: 1rem;
+}
+
+h1 {
+    border-bottom: 2px solid #333;
+    padding-bottom: 0.5rem;
 }
 
 main h1 {
@@ -36,7 +69,7 @@ main h1 {
 }
 
 main img {
-   width: 150px;
+    width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
@@ -59,28 +92,30 @@ img.profile {
 
 
 p {
-   padding: 0;
+    padding: 0;
 
 }
 
-aside{
+aside {
     position: relative;
-    width: 20em;
     margin: 1em;
-    border: 1px solid rgb(0,0,0, 0.2);
+    border: 1px solid rgb(0, 0, 0, 0.2);
     padding: 1em;
     background-color: #eee;
     color: #333;
     text-align: center;
+    grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        width: 20rem;
 }
 
-aside img{
+aside img {
     width: 200px;
     height: auto;
 }
 
 aside h2 {
-position: absolute;
+    position: absolute;
     top: 47px;
     left: 150px;
     background-color: rgba(255, 255, 255, 0.7);
@@ -95,4 +130,5 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+
 }
