--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,19 +25,33 @@ body {
 
 /* Sidebar Header */
 header {
-    background-color: var(--background-color);
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
-    padding: 20px;
-    border-right: 2px solid #ddd;
+    background-color: var(--background-color);
+    padding: 10px 30px;
+}
+
+.main-nav {
+    display: flex;
+    justify-content: flex-end;
+    gap: 30px;
+}
+
+.main-nav a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--secondary-color);
+    transition: 0.3s;
+}
+
+.main-nav a:hover,
+.main-nav a.active {
+    color: var(--primary-color);
 }
 
 .logo {
-    width: 130px;
-    margin-bottom: 20px;
+    width: 120px;
 }
 
 .sidebar {
@@ -63,6 +77,8 @@ main {
     grid-column: 2 / 3;
     padding: 20px 40px;
 }
+
+
 
 /* HERO Requirements */
 .hero {
@@ -126,26 +142,58 @@ section h2 {
 }
 
 /* History image (separate requirement) */
-.history-img {
+/* .history-img {
     margin-top: 40px;
     width: 100%;
     border-radius: 8px;
+} */
+
+.history-section {
+    margin-top: 40px;
 }
 
+.history-layout {
+    display: grid;
+    grid-template-columns: 1fr 300px 1fr;
+    gap: 20px;
+    align-items: center;
+}
+
+.history-layout img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* adventure section */
+.adventure-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.adventure-grid figure {
+    text-align: center;
+}
+
+.adventure-grid img {
+    width: 100%;
+    border-radius: 8px;
+}
 /* Footer */
 footer {
-    grid-column: 1 / 3;
-    text-align: center;
-    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
     background-color: var(--background-color);
-    border-top: 2px solid #ddd;
 }
 
-.socialmedia a {
-    margin: 0 10px;
-    text-decoration: none;
+.socialmedia {
+    display: flex;
+    gap: 15px;
 }
 
 .socialmedia img {
-    width: 24px;
+    width: 28px;
 }
